--- a/samples/express-sample/package.json
+++ b/samples/express-sample/package.json
@@ -15,6 +15,7 @@
         "autoprefixer": "^10.4.21",
         "body-parser": "^2.2.0",
         "cookie": "^1.0.2",
+        "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "morgan": "^1.10.0",
         "postcss": "^8.5.3",
