--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -5,7 +5,7 @@ on:
   #   branches:
   #     - main
   #   paths:
-  #     - "packages/light-auth-core/**"
+  #     - "light-auth-core/**"
   #     - ".github/workflows/publish-core.yml"
   workflow_dispatch:
 
@@ -24,14 +24,14 @@ jobs:
 
       - name: "Install dependencies"
         run: npm ci
-        working-directory: packages/light-auth-core
+        working-directory: light-auth-core
 
       - name: "Run build"
         run: npm run build
-        working-directory: packages/light-auth-core
+        working-directory: light-auth-core
 
       - name: "Publish to npm"
         run: npm publish --access public
-        working-directory: packages/light-auth-core/dist
+        working-directory: light-auth-core/dist
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
