--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -32,6 +32,6 @@ jobs:
 
       - name: "Publish to npm"
         run: npm publish --access public
-        working-directory: light-auth-core/dist
+        working-directory: light-auth-core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
