--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -31,7 +31,7 @@ jobs:
         working-directory: light-auth-core
 
       - name: "Publish to npm"
-        run: npm publish
+        run: npm publish --access public
         working-directory: light-auth-core
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
