--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@light-auth/nextjs",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "light auth framework for react, using artic",
   "author": {
     "name": "Sébastien Pertus",
@@ -49,7 +49,8 @@
   "peerDependencies": {
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "arctic": "^3.6.0"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
