--- a/samples/nextjs-sample/package.json
+++ b/samples/nextjs-sample/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@light-auth/nextjs": "0.0.3",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
@@ -16,8 +17,6 @@
     "arctic": "^3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "@light-auth/core": "workspace:*",
-    "@light-auth/nextjs": "workspace:*",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
