--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -44,7 +44,7 @@
   "dependencies": {
     "arctic": "^3.6.0",
     "jose": "^6.0.10",
-    "@light-auth/core": "latest"
+    "@light-auth/core": "0.0.3"
   },
   "peerDependencies": {
     "next": "^15.3.1",
