--- a/samples/nextjs-sample/package.json
+++ b/samples/nextjs-sample/package.json
@@ -17,6 +17,7 @@
     "arctic": "^3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.11",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "react": "^19.0.0",
