Refactor light-auth core and samples
- Updated light-auth core to include new signin function (createSigninFunction2) and improved session handling.
- Modified cookie store and router implementations for better context handling.
- Enhanced error logging in user functions and session management.
- Removed unused components from Astro sample, including FeedbackForm and GoogleLoginButton.
- Simplified LoginButtons component and improved layout in index.astro.
- Added LogoutButton component for user logout functionality.
- Updated user adapter paths to use "./users_db" for consistency across samples.
- Cleaned up unnecessary console logs and comments in various files.

--- a/light-auth-core/package.json
+++ b/light-auth-core/package.json
@@ -19,16 +19,12 @@
   ],
   "type": "module",
   "main": "dist/index.mjs",
+  "module": "dist/index.mjs",
+  "types": "src/index.tsx",
   "files": [
+    "src",
     "dist"
   ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "default": "./dist/index.mjs"
-    }
-  },
   "scripts": {
     "build": "npm run clean && rollup -c --bundleConfigAsCjs",
     "dev": "rollup -cw --bundleConfigAsCjs",
@@ -41,15 +37,15 @@
     "jose": "^6.0.10"
   },
   "peerDependencies": {
+    "arctic": "^3.6.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "arctic": "^3.6.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "rollup": "^4.40.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
+    "rollup": "^4.40.1",
     "shx": "^0.4.0",
     "tslib": "^2.8.1"
   }
