--- a/light-auth-core/package.json
+++ b/light-auth-core/package.json
@@ -18,9 +18,23 @@
     "light-auth"
   ],
   "type": "module",
-  "main": "dist/index.mjs",
-  "module": "dist/index.mjs",
-  "types": "src/index.tsx",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs",
+      "types": "./src/index.tsx"
+    },
+    "./adapters": {
+      "import": "./dist/adapters/index.mjs",
+      "require": "./dist/adapters/index.cjs",
+      "types": "./src/adapters/index.tsx"
+    },
+    "./client": {
+      "import": "./dist/client/index.mjs",
+      "require": "./dist/client/index.cjs",
+      "types": "./src/client/index.ts"
+    }
+  },
   "files": [
     "src",
     "dist"
