--- a/samples/astro-sample/package.json
+++ b/samples/astro-sample/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
+    "@astrojs/node": "^9.2.1",
     "@astrojs/react": "^4.2.7",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.1",
