feat: Add configuration validation and session handling for LightAuth
- Implemented `checkConfig` function to validate LightAuth configuration and ensure required fields are present.
- Enhanced session management in Next.js with a new `createNextJsLightAuthSessionFunction` that fetches session data from the API.
- Added `generateStoreId` method to `nextJsLightAuthCookieStore` for unique session identifiers.
- Refactored user adapter to remove redundant `generateStoreId` method.
- Updated Astro sample client to include session retrieval and user management functions.
- Created HTTP handlers for session retrieval, user management, login redirection, and logout functionality.
- Introduced a new router interface for handling LightAuth routes and responses.
- Added client-side button component for fetching session data in Next.js sample.
- Updated package exports to reflect new structure and types.

--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -25,7 +25,7 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./src/index.tsx",
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
     },
