Refactor authentication client and server components
- Updated import paths for `CreateLightAuthClient` and `CreateLightAuth` to reflect new directory structure.
- Removed obsolete `light-auth-client.ts` and `light-auth.ts` files.
- Implemented new cookie and session management in `astro-light-auth-cookie-store.ts` and `astro-light-auth-router.ts`.
- Introduced `ClientLoginButton` and `ClientLogoutButton` components for client-side authentication.
- Enhanced session handling in Next.js sample with updated `auth-client.ts`.
- Cleaned up unused code and comments in various components and pages.

--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -19,7 +19,6 @@
     "light-auth"
   ],
   "type": "module",
-  "main": "dist/index.mjs",
   "files": [
     "dist"
   ],
@@ -30,7 +29,7 @@
       "default": "./dist/index.mjs"
     },
     "./client": {
-      "types": "./dist/index_client.d.ts",
+      "types": "./src/index_client.tsx",
       "import": "./dist/index_client.mjs",
       "default": "./dist/index_client.mjs"
     }
