--- a/light-auth-core/package.json
+++ b/light-auth-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@light-auth/core",
   "version": "0.0.3",
-  "description": "light auth core framework agnostic, using artic",
+  "description": "light auth core framework agnostic, using arctic",
   "author": {
     "name": "Sébastien Pertus",
     "email": "spertus@microsoft.com",
