--- a/samples/nuxt-sample/package.json
+++ b/samples/nuxt-sample/package.json
@@ -21,6 +21,12 @@
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
-  }
+    "vue-router": "^4.5.1",
+    "arctic": "^3.6.0",
+    "jose": "^6.0.10",
+    "@light-auth/core": "0.0.3"
+  },
+  "workspaces": [
+    "../../light-auth-core"
+  ]
 }
