--- a/samples/nuxt-sample/package.json
+++ b/samples/nuxt-sample/package.json
@@ -24,9 +24,11 @@
     "vue-router": "^4.5.1",
     "arctic": "^3.6.0",
     "jose": "^6.0.10",
-    "@light-auth/core": "0.0.3"
+    "@light-auth/core": "0.0.3",
+    "@light-auth/nuxt": "0.0.3"
   },
   "workspaces": [
-    "../../light-auth-core"
+    "../../light-auth-core",
+    "../../light-auth-nuxt"
   ]
 }
