feat: initialize light-auth-astro package with core functionalities
- Added package.json with dependencies, scripts, and metadata.
- Created rollup.config.js for building the package.
- Implemented astroLightAuthRouter for handling authentication routes.
- Developed astroLightAuthSessionStore for managing session cookies.
- Created index.ts to export main functionalities.
- Implemented light-auth.ts for authentication logic and handler functions.
- Configured TypeScript with tsconfig.json for strict type checking and module resolution.

--- a/samples/astro-sample/package.json
+++ b/samples/astro-sample/package.json
@@ -34,7 +34,7 @@
     "tw-animate-css": "^1.2.9"
   },
   "workspaces": [
-    "../../light-auth-nextjs",
-    "../../light-auth-core"
+    "../../light-auth-core",
+    "../../light-auth-astro"
   ]
 }
