--- a/light-auth-astro/package.json
+++ b/light-auth-astro/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@light-auth/core",
+  "name": "@light-auth/astro",
   "version": "0.0.5",
-  "description": "light auth core framework agnostic, using arctic",
+  "description": "light auth framework for astro, using arctic",
   "author": {
     "name": "Sébastien Pertus",
     "email": "spertus@microsoft.com",
@@ -9,31 +9,26 @@
   },
   "license": "MIT",
   "keywords": [
-    "react",
+    "vue",
     "nodejs",
     "oauth",
     "jwt",
     "oauth2",
     "authentication",
+    "nuxt",
     "light-auth"
   ],
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs",
-      "types": "./src/index.tsx"
-    },
-    "./adapters": {
-      "import": "./dist/adapters/index.mjs",
-      "require": "./dist/adapters/index.cjs",
-      "types": "./src/adapters/index.ts"
-    }
-  },
   "files": [
-    "src",
     "dist"
   ],
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.mjs"
+    }
+  },
   "scripts": {
     "build": "npm run clean && rollup -c --bundleConfigAsCjs",
     "dev": "rollup -cw --bundleConfigAsCjs",
@@ -42,20 +37,20 @@
   },
   "dependencies": {
     "arctic": "^3.6.0",
-    "cookie": "^1.0.2",
-    "jose": "^6.0.10"
+    "jose": "^6.0.10",
+    "@light-auth/core": "0.0.3"
   },
   "peerDependencies": {
     "arctic": "^3.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "astro": "^5.7.10"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "rollup": "^4.40.1",
     "shx": "^0.4.0",
-    "tslib": "^2.8.1"
-  }
+    "astro": "^5.7.10"
+  },
+  "workspaces": [
+    "../light-auth-core"
+  ]
 }
