--- a/light-auth-astro/package.json
+++ b/light-auth-astro/package.json
@@ -27,6 +27,11 @@
       "types": "./src/index.ts",
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
+    },
+    "./client": {
+      "types": "./src/client/index.ts",
+      "import": "./dist/client/index.mjs",
+      "default": "./dist/client/index.mjs"
     }
   },
   "scripts": {
@@ -40,15 +45,11 @@
     "jose": "^6.0.10",
     "@light-auth/core": "0.0.3"
   },
-  "peerDependencies": {
-    "arctic": "^3.6.0",
-    "astro": "^5.7.10"
-  },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.3",
     "shx": "^0.4.0",
-    "astro": "^5.7.10"
+    "astro": "5.7.10"
   },
   "workspaces": [
     "../light-auth-core"
