--- a/samples/astro-sample/package.json
+++ b/samples/astro-sample/package.json
@@ -19,7 +19,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
     "arctic": "^3.6.0",
-    "astro": "^5.7.10",
+    "astro": "5.7.10",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
