feat: refactor authentication handling and enhance client-side support in Nuxt.js

--- a/light-auth-nuxt/package.json
+++ b/light-auth-nuxt/package.json
@@ -27,6 +27,11 @@
       "types": "./src/index.ts",
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
+    },
+    "./client": {
+      "types": "./src/client/index.ts",
+      "import": "./dist/client/index.mjs",
+      "default": "./dist/client/index.mjs"
     }
   },
   "scripts": {
