--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@light-auth/nextjs",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "light auth framework for react, using arctic",
   "author": {
     "name": "Sébastien Pertus",
@@ -24,12 +24,18 @@
   ],
   "exports": {
     ".": {
-      "types": "./src/index.ts",
+      "types": [
+        "./src/index.ts",
+        "./dist/index.d.ts"
+      ],
       "import": "./dist/index.mjs",
       "default": "./dist/index.mjs"
     },
     "./client": {
-      "types": "./src/client/index.ts",
+      "types": [
+        "./src/client/index.ts",
+        "./dist/client/index.d.ts"
+      ],
       "import": "./dist/client/index.mjs",
       "default": "./dist/client/index.mjs"
     }
@@ -43,7 +49,7 @@
   "dependencies": {
     "arctic": "^3.6.0",
     "jose": "^6.0.10",
-    "@light-auth/core": "^0.0.6"
+    "@light-auth/core": "^0.0.7"
   },
   "peerDependencies": {
     "next": "^15.3.1",
