--- a/samples/sveltekit-sample/package.json
+++ b/samples/sveltekit-sample/package.json
@@ -36,11 +36,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
-		"@light-auth/core": "0.0.3",
 		"arctic": "^3.6.0",
 		"jose": "^6.0.10"
 	},
 	"workspaces": [
-		"../../light-auth-core"
+		"../../light-auth-core",
+		"../../light-auth-sveltekit"
 	]
 }
