feat: initial commit of light-auth-express package with core authentication functionalities
- Added package.json with metadata and dependencies for light-auth-express.
- Implemented rollup configuration for building the package.
- Created client-side authentication functions in light-auth-client.ts.
- Developed express-light-auth-router.ts for handling authentication routes.
- Implemented express-light-auth-session-store.ts for session management.
- Created main entry point in index.ts to export essential functionalities.
- Developed light-auth.ts for server-side authentication handling.
- Configured TypeScript settings in tsconfig.json for the project.
- Added sample express application demonstrating usage of light-auth-express.
- Included Google and Microsoft authentication providers in the sample.
- Implemented login functionality in the sample application.
- Added SVG icon for Google login in the sample application.

--- a/samples/express-sample/tsconfig.json
+++ b/samples/express-sample/tsconfig.json
@@ -9,14 +9,13 @@
         "noImplicitAny": true, /* Enable error reporting for expressions and declarations with an implied 'any' type. */
         "strictNullChecks": true, /* When type checking, take into account 'null' and 'undefined'. */
         "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-        "outDir": "./dist",
+        "outDir": "./public/js",
         "sourceMap": true,
         "jsx": "preserve",
-        "allowJs": false, /* Allow JavaScript files to be compiled. */
-        "declaration": true, /* Generates corresponding '.d.ts' file. */
+        "allowJs": false,
     },
     "include": [
-        "src"
+        "lib",
     ],
     "exclude": [
         "node_modules",
