--- a/samples/express-sample/package.json
+++ b/samples/express-sample/package.json
@@ -5,12 +5,11 @@
     "main": "app.js",
     "type": "module",
     "scripts": {
-        "dev": "npx tsx watch --env-file=.env src/app.ts & npm run build:css -w",
+        "build": "npm run clean && rollup -c --bundleConfigAsCjs",
+        "dev": "npx tsx watch --env-file=.env src/app.ts & rollup -cw --bundleConfigAsCjs & npm run build:css -w",
         "build:css": "npx @tailwindcss/cli -i ./public/css/style.css -o ./public/css/output.css --watch"
     },
     "dependencies": {
-        "@light-auth/core": "workspace:*",
-        "@light-auth/nextjs": "workspace:*",
         "arctic": "^3.6.0",
         "autoprefixer": "^10.4.21",
         "body-parser": "^2.2.0",
@@ -25,14 +24,20 @@
         "typescript": "^5.8.3"
     },
     "devDependencies": {
+        "@rollup/plugin-typescript": "^12.1.2",
         "@tailwindcss/cli": "^4.1.5",
         "@types/express": "^5.0.1",
-        "@types/node": "^22.15.3",
+        "@types/node": "^22.15.21",
         "@types/pug": "^2.0.10",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "rollup": "^2.79.2",
+        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "tslib": "^2.8.1"
     },
     "workspaces": [
-        "../../light-auth-nextjs",
+        "../../light-auth-express",
         "../../light-auth-core"
     ]
 }
