--- a/samples/sveltekit-sample/package.json
+++ b/samples/sveltekit-sample/package.json
@@ -17,7 +17,7 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/kit": "^2.21.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22.15.19",
@@ -37,7 +37,10 @@
 	},
 	"dependencies": {
 		"arctic": "^3.6.0",
-		"jose": "^6.0.10",
-		"@light-auth/sveltekit": "^0.0.8"
-	}
+		"jose": "^6.0.10"
+	},
+	"workspaces": [
+		"../../light-auth-core",
+		"../../light-auth-sveltekit"
+	]
 }
