--- a/samples/express-sample/package.json
+++ b/samples/express-sample/package.json
@@ -24,13 +24,18 @@
         "typescript": "^5.8.3"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^28.0.3",
+        "@rollup/plugin-node-resolve": "^16.0.1",
         "@rollup/plugin-typescript": "^12.1.2",
         "@tailwindcss/cli": "^4.1.5",
         "@types/express": "^5.0.1",
         "@types/node": "^22.15.21",
         "@types/pug": "^2.0.10",
+        "babel-plugin-external-helpers": "^6.22.0",
+        "babel-preset-es2015": "^6.24.1",
         "nodemon": "^3.0.1",
         "rollup": "^2.79.2",
+        "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-terser": "^7.0.2",
