feat(nuxt-sample): update dependencies and improve Google sign-in UI
- Added new dependencies: @light-auth/core, @light-auth/nuxt, @nuxt/image, arctic, and jose.
- Removed duplicate dependencies from package.json.
- Updated index.vue to replace inline SVG for Google sign-in with NuxtImg component.
- Simplified login API handler by removing unnecessary H3Event import.
- Added Google SVG assets to the project.
- Created a GitHub Actions workflow for publishing light-auth-express to npm.
- Updated SvelteKit sample to improve authentication handling and added a new route for Chrome DevTools.

--- a/light-auth-astro/package.json
+++ b/light-auth-astro/package.json
@@ -55,7 +55,8 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.3",
     "shx": "^0.4.0",
-    "astro": "5.7.10"
+    "astro": "5.7.10",
+    "cookie": "^1.0.2"
   },
   "workspaces": [
     "../light-auth-core"
