--- a/samples/nuxt-sample/package.json
+++ b/samples/nuxt-sample/package.json
@@ -10,9 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@light-auth/core": "0.0.3",
+    "@light-auth/nuxt": "0.0.3",
+    "@nuxt/image": "^1.10.0",
     "@tailwindcss/vite": "^4.1.6",
+    "arctic": "^3.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.0.10",
     "lucide-vue-next": "^0.509.0",
     "nuxt": "^3.17.2",
     "reka-ui": "^2.2.1",
@@ -21,11 +26,7 @@
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "arctic": "^3.6.0",
-    "jose": "^6.0.10",
-    "@light-auth/core": "0.0.3",
-    "@light-auth/nuxt": "0.0.3"
+    "vue-router": "^4.5.1"
   },
   "workspaces": [
     "../../light-auth-core",
