--- a/light-auth-sveltekit/package.json
+++ b/light-auth-sveltekit/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@light-auth/sveltekit",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "light auth framework for sveltekit, using arctic",
   "author": {
     "name": "Sébastien Pertus",
@@ -46,13 +46,13 @@
     "clean": "shx rm -rf dist lib",
     "start": "rollup -c -w"
   },
-  "peerDependencies": {
-    "@light-auth/core": "^0.0.8",
-    "@sveltejs/kit": "^2.21.1",
+  "dependencies": {
+    "@light-auth/core": "^0.1.0",
     "arctic": "^3.6.0",
     "jose": "^6.0.10"
   },
   "devDependencies": {
+    "@sveltejs/kit": "^2.21.1",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
