--- a/samples/sveltekit-sample/package.json
+++ b/samples/sveltekit-sample/package.json
@@ -14,6 +14,8 @@
 		"lint": "prettier --check . && eslint ."
 	},
 	"devDependencies": {
+		"@light-auth/sveltekit": "^0.1.0",
+		"@light-auth/core": "^0.1.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
@@ -38,9 +40,5 @@
 	"dependencies": {
 		"arctic": "^3.6.0",
 		"jose": "^6.0.10"
-	},
-	"workspaces": [
-		"../../light-auth-core",
-		"../../light-auth-sveltekit"
-	]
+	}
 }
