--- a/.github/workflows/publish-core.yml
+++ b/.github/workflows/publish-core.yml
@@ -8,6 +8,8 @@ on:
   #     - "light-auth-core/**"
   #     - ".github/workflows/publish-core.yml"
   workflow_dispatch:
+  workflow_call:
+
 
 jobs:
   build-and-publish:
