--- a/.github/workflows/publish-nuxt.yml
+++ b/.github/workflows/publish-nuxt.yml
@@ -8,6 +8,7 @@ on:
   #     - "light-auth-nuxt/**"
   #     - ".github/workflows/publish-nuxt.yml"
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   build-and-publish:
