Refactor SvelteKit sample authentication and session handling
- Updated package.json to reorganize dependencies and add workspaces.
- Enhanced +page.server.ts to include session loading and improved error handling during sign-in.
- Modified +page.svelte to display user session information and streamline sign-in process.
- Improved API route handling in [...lightauth]/+server.ts to manage redirects on errors.
- Removed outdated todo.md file.
- Added login and logout actions in Next.js sample for better authentication management.
- Created ClientLoginActionButton component in Next.js for client-side login functionality.

--- a/light-auth-astro/package.json
+++ b/light-auth-astro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@light-auth/astro",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "light auth framework for astro, using arctic",
   "author": {
     "name": "Sébastien Pertus",
@@ -9,14 +9,16 @@
   },
   "license": "MIT",
   "keywords": [
-    "vue",
     "nodejs",
     "oauth",
-    "jwt",
     "oauth2",
+    "oidc",
+    "openid",
+    "jwt",
     "authentication",
-    "nuxt",
-    "light-auth"
+    "astro",
+    "light-auth",
+    "light-auth-astro"
   ],
   "type": "module",
   "files": [
@@ -49,7 +51,7 @@
   "dependencies": {
     "arctic": "^3.6.0",
     "jose": "^6.0.10",
-    "@light-auth/core": "^0.1.0"
+    "@light-auth/core": "^0.1.1"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
