--- a/light-auth-nextjs/package.json
+++ b/light-auth-nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@light-auth/nextjs",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "light auth framework for react, using arctic",
   "author": {
     "name": "Sébastien Pertus",
@@ -9,14 +9,18 @@
   },
   "license": "MIT",
   "keywords": [
-    "react",
     "nodejs",
     "oauth",
-    "jwt",
     "oauth2",
+    "oidc",
+    "openid",
+    "jwt",
     "authentication",
+    "auth",
+    "light-auth",
+    "light-auth-nextjs",
     "nextjs",
-    "light-auth"
+    "react"
   ],
   "type": "module",
   "files": [
@@ -49,7 +53,7 @@
   "dependencies": {
     "arctic": "^3.6.0",
     "jose": "^6.0.10",
-    "@light-auth/core": "^0.1.0"
+    "@light-auth/core": "^0.1.1"
   },
   "devDependencies": {
     "next": "^15.3.1",
