--- a/light-auth-sveltekit/tsconfig.json
+++ b/light-auth-sveltekit/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "preserve",
     "allowJs": false, /* Allow JavaScript files to be compiled. */
     "declaration": true, /* Generates corresponding '.d.ts' file. */
+    "verbatimModuleSyntax": true, /* Preserve the original module syntax in the output. */
   },
   "include": [
     "src"
