fix: add missing environment variable for workflow triggers in dispatcher.yml

--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -9,18 +9,30 @@ jobs:
     steps:
       - name: Trigger light-auth-core
         run: gh workflow run light-auth-core.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-astro
         run: gh workflow run light-auth-astro.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-express
         run: gh workflow run light-auth-express.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-nextjs
         run: gh workflow run light-auth-nextjs.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-nuxt
         run: gh workflow run light-auth-nuxt.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-sveltekit
         run: gh workflow run light-auth-sveltekit.yml@main
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
