fix: add missing checkout step in dispatcher.yml workflow

--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -7,6 +7,9 @@ jobs:
   trigger-all:
     runs-on: ubuntu-latest
     steps:
+      - name: "Checkout repository"
+        uses: actions/checkout@v4
+
       - name: Trigger light-auth-core
         run: gh workflow run light-auth-core.yml@main
         env:
