--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -11,31 +11,31 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Trigger light-auth-core
-        run: gh workflow run light-auth-core.yml@main
+        run: gh workflow run light-auth-core.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-astro
-        run: gh workflow run light-auth-astro.yml@main
+        run: gh workflow run light-auth-astro.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-express
-        run: gh workflow run light-auth-express.yml@main
+        run: gh workflow run light-auth-express.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-nextjs
-        run: gh workflow run light-auth-nextjs.yml@main
+        run: gh workflow run light-auth-nextjs.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-nuxt
-        run: gh workflow run light-auth-nuxt.yml@main
+        run: gh workflow run light-auth-nuxt.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Trigger light-auth-sveltekit
-        run: gh workflow run light-auth-sveltekit.yml@main
+        run: gh workflow run light-auth-sveltekit.yml
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
