fix: update version to 0.1.7 in package.json; improve session handling in retrieve-session.ts; add fetch imports in light-auth-client.ts; configure paths in tsconfig.json

--- a/light-auth-nuxt/tsconfig.json
+++ b/light-auth-nuxt/tsconfig.json
@@ -15,6 +15,11 @@
     "allowJs": false, /* Allow JavaScript files to be compiled. */
     "declaration": true, /* Generates corresponding '.d.ts' file. */
     "verbatimModuleSyntax": true, /* Preserve the original module syntax in the output. */
+    "paths": {
+      "#imports": [
+        "./node_modules/nuxt/dist/app/composables"
+      ]
+    }
   },
   "include": [
     "src"
