--- a/samples/sveltekit-sample/package.json
+++ b/samples/sveltekit-sample/package.json
@@ -34,10 +34,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@lucide/svelte": "^0.513.0",
 		"@sveltejs/kit": "^2.21.1",
-		"svelte": "^5.0.0",
 		"arctic": "^3.6.0",
-		"jose": "^6.0.10"
+		"jose": "^6.0.10",
+		"svelte": "^5.0.0"
 	},
 	"workspaces": [
 		"../../light-auth-core",
