--- a/light-auth-tanstack-react-start/package.json
+++ b/light-auth-tanstack-react-start/package.json
@@ -52,17 +52,17 @@
     "start": "rollup -c -w"
   },
   "dependencies": {
+    "@light-auth/core": "^0.3.1",
     "arctic": "^3.6.0",
-    "jose": "^6.0.10",
-    "@light-auth/core": "^0.3.1"
+    "jose": "^6.0.10"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.2",
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "shx": "^0.4.0",
     "@tanstack/react-router": "^1.127.8",
-    "@tanstack/react-start": "^1.127.8"
+    "@tanstack/react-start": "^1.127.8",
+    "@types/node": "^22.17.0",
+    "@types/react": "^19.1.2",
+    "shx": "^0.4.0"
   },
   "workspaces": [
     "../light-auth-core"
